initilize documentation using sphinx

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 
                 <span class="link-block">
-                  <a href="docs/index.html" target="_blank"
+                  <a href="docs/build/html/index.html" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fa fa-book"></i>
