minor changes: 1. added comma between authors 2. added affiliation links 3. added a request of citation in BibTex section

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                   <a href="https://scholar.google.com/citations?user=WyqGF10AAAAJ" target="_blank">Tat-Jun Chin</a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://scholar.google.com/citations?user=oVS3HHIAAAAJ" target="_blank">Sourav Garg</a>
+                  <a href="https://scholar.google.com/citations?user=oVS3HHIAAAAJ" target="_blank">Sourav Garg</a>,
                 </span>
                 <span class="author-block">
                   <a href="https://scholar.google.com/citations?user=Lzs8CuEAAAAJ" target="_blank">Feras Dayoub</a>
@@ -228,8 +228,14 @@
 
               <div class="is-size-5 publication-authors">
                 <!-- TODO: Replace with your institution and conference/journal info -->
-                <span class="author-block">Australian Institute for Machine Learning<br>The IEEE/CVF Winter Conference
-                  on Applications of Computer Vision 2026</span>
+                <span class="author-block">
+                  <a href="https://www.adelaide.edu.au/aiml/" target="_blank">Australian Institute for Machine Learning
+                    (AIML)</a>,
+                  <a href="https://www.adelaide.edu.au/" target="_blank">The University of Adelaide</a><br>
+                  <a href="https://wacv.thecvf.com/" target="_blank">The IEEE/CVF
+                    Winter Conference on Applications of Computer Vision
+                    2026</a>
+                </span>
               </div>
 
               <div class="column has-text-centered">
@@ -441,6 +447,12 @@
             <i class="fas fa-copy"></i>
             <span class="copy-text">Copy</span>
           </button>
+        </div>
+        <div class="content is medium has-text-justified">
+          <p>
+            Please use the following citation for any work relies on the SceneEdited dataset or the ScenePoint-ETK
+            toolkit.
+          </p>
         </div>
         <pre id="bibtex-code"><code>@InProceedings{SceneEdited,
   author    = {Lin, Chun-Jung and Chin, Tat-Jun and Garg, Sourav and Dayoub, Feras},
